--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.10.0",
     "emoji-picker-react": "^4.13.2",
     "fontawesome": "^5.6.3",
+    "lucide-react": "^0.534.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
